get_user_by_id is not working
